---
source: crates/tapir-script/compiler/src/compile/ir.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/ir/loop_factorial.tapir
---
=======================
fn @toplevel() -> 

---- block 0 ----
temp.3 = int 10
x.0 = factorial(temp.3)
wait
return 

=======================
fn factorial(x.1) -> int

---- block 2 ----
result.2 = int 1
jmp 0

---- block 0 ----
temp.5 = x.1
temp.6 = int 0
temp.4 = temp.5 == temp.6
conditional_jump temp.4 3 4

---- block 3 ----
temp.7 = result.2
return temp.7

---- block 4 ----
jmp 5

---- block 5 ----
temp.8 = result.2
temp.9 = x.1
result.2 = temp.8 * temp.9
temp.10 = x.1
temp.11 = int 1
x.1 = temp.10 - temp.11
jmp 0
